fix: collapse & design fixes

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/components/request/components/KeyValueTable/AutoGeneratedTable.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/components/request/components/KeyValueTable/AutoGeneratedTable.scss
@@ -1,6 +1,33 @@
 .auto-gen-table-container {
   margin-bottom: 16px;
 
+  &.collapsed {
+    .heading-text {
+      color: var(--requestly-color-text-subtle);
+    }
+    svg {
+      stroke: var(--requestly-color-text-subtle);
+    }
+    & > .ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
+      border-radius: 4px !important;
+    }
+  }
+
+  &.expanded {
+    .heading-text {
+      color: var(--requestly-color-text-default);
+    }
+    svg {
+      stroke: var(--requestly-color-text-default);
+    }
+    & > .ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
+      border-radius: 4px 4px 0 0 !important;
+    }
+    & .ant-table-content {
+      border-radius: 0 0 4px 4px !important;
+    }
+  }
+
   & .ant-collapse-header {
     border: 1px solid #303030;
   }
@@ -15,6 +42,7 @@
     padding: 8px 12px !important;
   }
   & > .ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
+    background: var(--requestly-color-surface-0);
     border-radius: unset !important;
     height: 30px;
   }
@@ -28,14 +56,13 @@
 
   & .ant-collapse-expand-icon {
     position: relative;
-    bottom: 5px;
+    bottom: 7px;
     left: 3px;
 
     svg {
       stroke-width: 50;
-      stroke: var(--requestly-color-text-default);
-      height: 9px;
-      width: 9px;
+      height: 8px;
+      width: 8px;
     }
   }
   & {
@@ -46,13 +73,13 @@
     position: relative;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 10px;
+    font-size: var(--requestly-font-size-2xs);
     font-style: normal;
     font-weight: 500;
     line-height: 13px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    bottom: 5px;
+    bottom: 6px;
   }
 
   .collapse-button {
@@ -75,6 +102,9 @@
       }
 
       td.ant-table-cell {
+        color: var(--requestly-color-text-subtle) !important;
+        cursor: not-allowed;
+
         .key-value-delete-btn.ant-btn.ant-btn-icon-only {
           opacity: 1;
         }
